<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"/>
<RadioGroup
    android:id="@+id/radio_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_red"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/red"
        android:textColor="@color/red"
        />

    <RadioButton
        android:id="@+id/radio_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:textColor="@color/green"
        android:layout_gravity="center"
        />

    <RadioButton
        android:id="@+id/radio_blue"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/blue"
        android:textColor="@color/blue"
        />
</RadioGroup>
</LinearLayout>